[project]
name = "chronomesh"
version = "0.1.0"
description = "ChronoMesh private rebuild for documentation retrieval and web scraping"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rushabh Vijay Ramani" },
]
dependencies = [
    "fastmcp>=2.12.2",
    "groq>=0.31.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "trafilatura>=2.0.0",
]
